calendar subtitle 추가 중

--- a/iOS/GSMFestival/GSMFestival/Base.lproj/Main.storyboard
+++ b/iOS/GSMFestival/GSMFestival/Base.lproj/Main.storyboard
@@ -149,9 +149,8 @@
                                 <rect key="frame" x="0.0" y="140" width="414" height="543"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="이벤트 없음" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CJW-vQ-BOU">
-                                <rect key="frame" x="20" y="691" width="188" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이벤트 없음" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CJW-vQ-BOU">
+                                <rect key="frame" x="20" y="691" width="194" height="22"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -160,6 +159,10 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CJW-vQ-BOU" secondAttribute="trailing" constant="200" id="8ON-lU-b7A"/>
+                            <constraint firstItem="CJW-vQ-BOU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Bz1-4x-a1k"/>
+                            <constraint firstItem="CJW-vQ-BOU" firstAttribute="top" secondItem="TrQ-5P-PUa" secondAttribute="bottom" constant="8" id="Tdl-lk-8uz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="CJW-vQ-BOU" secondAttribute="bottom" constant="100" id="Zyq-UX-3E2"/>
                             <constraint firstItem="TrQ-5P-PUa" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="gDo-Mk-HSN"/>
                             <constraint firstItem="TrQ-5P-PUa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ofE-eP-Hp0"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="TrQ-5P-PUa" secondAttribute="bottom" constant="130" id="pCf-9a-BIh"/>
@@ -169,6 +172,7 @@
                     <navigationItem key="navigationItem" title="학사일정" id="51a-Lx-ucE"/>
                     <connections>
                         <outlet property="calendarView" destination="TrQ-5P-PUa" id="knr-Pq-d30"/>
+                        <outlet property="subtitleLabel" destination="CJW-vQ-BOU" id="XG4-uz-pKN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
